--- a/assessment.html
+++ b/assessment.html
@@ -15,7 +15,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
   <title>ざわが作ったあなたのいいところ診断</title>
 </head>
-<body>
+<body class="bg-primary-subtle">
+  <header>
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+      </div>
+    </nav>
+  </header>
+
+  <div class="container pt-5">
+    <h1>あなたのいいところは？</h1>
+    <p>診断したい名前を入れてください</p>
+    <input type="text" id="user-name" size="40" maxlength="20">
+    <button id="assessment">診断する</button>button>
+    <div id="result-area"></div>
+    <div id="tweet-area"></div>
+  </div>
   <h1>あなたのいいところは？</h1>
   <p>診断したい名前を入れてください</p>
   <input type="text" id="user-name" size="40" maxlength="20">
